# bounty-challenge-v2

./: .env.example  .gitignore  .releaserc.json  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.toml  openapi.json  package-lock.json  package.json  tsconfig.json
.githooks/: pre-commit  pre-push
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml  protect-valid-label.yml  version-check.yml
coverage/html/: index.html
coverage/html/coverage/home/runner/work/bounty-challenge/bounty-challenge/src/: auth.rs.html  challenge.rs.html  config.rs.html  discovery.rs.html  gh_cli.rs.html  github.rs.html  github_oauth.rs.html  main.rs.html  metagraph.rs.html  pg_storage.rs.html  server.rs.html
docker/: entrypoint.sh  motd.txt
docs/: AGENTS.md  anti-abuse.md  api-reference.md  getting-started.md  scoring.md
docs/miner/: getting-started.md  registration.md
docs/reference/: api-reference.md  scoring.md
docs/validator/: setup.md
examples/: leaderboard.sh  test_gh_cli.rs
migrations/: 001_schema.sql  003_github_issues.sql  003_penalty_system.sql  004_stars.sql  006_project_tags.sql  007_fix_weights.sql  008_cleanup.sql  009_admin_bonus.sql  010_fix_negative_weight.sql  011_fix_negative_weight.sql  012_remove_weight_cap.sql  013_duplicate_issues.sql  015_fix_24h_consistency.sql  016_unified_penalty.sql  017_duplicate_use_created_at.sql  018_separate_penalties.sql  AGENTS.md  README.md
output/: dispatch-manifest.json
src/: AGENTS.md  analyze-issues.ts  auth.rs  challenge.rs  clone-repo.ts  config.rs  discovery.rs  fetch-issues.ts  generate-worker-specs.ts  gh_cli.rs  git-manager.ts  github.rs  github_oauth.rs  index.ts  lib.rs  main.rs  orchestrator.ts  pg_storage.rs  scoring.rs  server.rs  storage.rs  worker.ts
wasm/: Cargo.toml
wasm/src/: consensus.rs  lib.rs  routes.rs  scoring.rs  types.rs  validation.rs
wasm/src/api/: handlers.rs
wasm/src/storage/: bounty_storage.rs  mod.rs
